[package]
name = "tokio-hrtime"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
libc = "0.2"
pin-project-lite = "0.2"

[features]
test = ["tokio/rt", "tokio/macros"]

[target.'cfg(unix)'.dependencies]
tokio = { version = "1", default-features = false, features = ["net"] }

[target.'cfg(windows)'.dependencies]
tokio = { version = "1", default-features = false }
tokio-util = "0.7"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }
