[package]
name = "tokio-hrtime"
version = "0.1.6"
edition = "2021"
rust-version = "1.81"
license = "BSL-1.0"
authors = ["Misaki Kasumi <misakikasumi@outlook.com>"]
repository = "https://github.com/ruihe774/tokio-hrtime"
description = "Hires timers for tokio"
keywords = ["async", "timer", "tokio"]
categories = ["asynchronous", "os"]

[dependencies]
cfg-if = "1"
pin-project-lite = "0.2"

[features]
test = ["tokio/rt", "tokio/rt-multi-thread"]
test-hires = ["test"]
rt = ["tokio/rt"]
default = ["rt"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"
tokio = { version = "^1.15", default-features = false, features = ["net"] }

[target.'cfg(windows)'.dependencies]
tokio = { version = "^1.15", default-features = false }
windows = { version = ">=0.51,<0.60", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }

[profile.test]
opt-level = 2
